manifests/prod/attic/EndpointSlice-attic.yaml
addressType: IPv4
apiVersion: discovery.k8s.io/v1
endpoints:
  - addresses:
      - 100.83.142.17
    conditions:
      ready: true
kind: EndpointSlice
metadata:
  labels:
    kubernetes.io/service-name: attic
  name: attic
  namespace: attic
ports:
  - name: http
    port: 3019
    protocol: TCP
