manifests/prod/attic/Service-attic.yaml
apiVersion: v1
kind: Service
metadata:
  name: attic
  namespace: attic
spec:
  ports:
    - name: http
      port: 80
      targetPort: 3019
  type: ClusterIP
